--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
             <p class="mb-1">Handcrafted by Javier Lecuona</p>
             <ul class="list-inline">
                 <li class="list-inline-item">
-                    <a href="https://github.com/javiercbk">Github</a>
+                    <a href="https://github.com/upcwangying">Github</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://github.com/javiercbk/json_to_dart">json_to_dart Code</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://twitter.com/javiercbk">Twitter</a>
+                    <a href="https://jsontodart.upcwangying.com">json_to_dart Code</a>
                 </li>
             </ul>
         </footer>
