--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" sizes="64x64" href="/icon.png">
     <title>JSON to Dart</title>
 
     <!-- Bootstrap core CSS -->
