--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="https://github.com/upcwangying">Github</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="https://jsontodart.upcwangying.com">json_to_dart Code</a>
+                    <a href="https://upcwangying.com/json_to_dart">json_to_dart Code</a>
                 </li>
             </ul>
         </footer>
